--- a/app/src/main/res/layout/activity_add_driving.xml
+++ b/app/src/main/res/layout/activity_add_driving.xml
@@ -4,62 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".addDriving">
+    tools:context=".AddDriving">
 
     <View
         android:id="@+id/topView"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_width="424dp"
+        android:layout_height="151dp"
         android:background="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view5"
-        android:layout_width="0dp"
+        android:layout_width="411dp"
         android:layout_height="100dp"
         android:background="@drawable/wave"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topView" />
+        app:layout_constraintTop_toBottomOf="@+id/topText" />
+
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="99dp"
         android:layout_height="125dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="48dp"
         android:contentDescription="@string/top_icon"
+        app:layout_constraintBottom_toBottomOf="@+id/view5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.437"
+        app:layout_constraintStart_toEndOf="@+id/topText"
+        app:layout_constraintTop_toTopOf="@+id/topView"
+        app:layout_constraintVertical_bias="0.233"
         app:srcCompat="@drawable/ic_drive" />
-
 
     <TextView
         android:id="@+id/topText"
-        android:layout_width="0dp"
+        android:layout_width="248dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="16dp"
         android:text="Adding Driving School"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/view5"
-        app:layout_constraintEnd_toStartOf="@+id/imageView5"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/topView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.126" />
+        app:layout_constraintBottom_toBottomOf="@+id/topView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/topView"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/inputDrivingName"
-        android:layout_width="328dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="32dp"
+        android:layout_width="320dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/round_border"
         android:drawableStart="@drawable/ic_driver"
         android:drawablePadding="16dp"
@@ -68,18 +65,17 @@
         android:inputType="text"
         android:padding="16dp"
         android:textColor="@color/blue"
+        android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.406"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view5" />
 
     <EditText
         android:id="@+id/inputLocation"
-        android:layout_width="334dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="32dp"
+        android:layout_width="321dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/round_border"
         android:drawableStart="@drawable/ic_baseline_location_on_24"
         android:drawablePadding="16dp"
@@ -88,18 +84,36 @@
         android:inputType="text"
         android:padding="16dp"
         android:textColor="@color/blue"
+        android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.411"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputContact" />
+        app:layout_constraintTop_toBottomOf="@+id/inputDrivingName" />
+
+    <EditText
+        android:id="@+id/inputAlternativeContact"
+        android:layout_width="325dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/round_border"
+        android:drawableStart="@drawable/ic_baseline_contact_phone_24"
+        android:drawablePadding="16dp"
+        android:ems="10"
+        android:hint="Alternative Contact Details"
+        android:inputType="number"
+        android:padding="16dp"
+        android:textColor="@color/blue"
+        android:textSize="14dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.43"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inputDescription" />
 
     <EditText
         android:id="@+id/inputContact"
-        android:layout_width="338dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="32dp"
+        android:layout_width="323dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/round_border"
         android:drawableStart="@drawable/ic_baseline_contact_phone_24"
         android:drawablePadding="16dp"
@@ -108,42 +122,58 @@
         android:inputType="number"
         android:padding="16dp"
         android:textColor="@color/blue"
+        android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.42"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputLocation" />
+
+    <EditText
+        android:id="@+id/inputDescription"
+        android:layout_width="318dp"
+        android:layout_height="88dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/round_border"
+        android:drawableStart="@drawable/ic_baseline_contact_phone_24"
+        android:drawablePadding="16dp"
+        android:ems="10"
+        android:hint="Description"
+        android:inputType="text"
+        android:padding="16dp"
+        android:textColor="@color/blue"
+        android:textSize="14dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.43"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inputContact" />
+
+    <TextView
+        android:id="@+id/noAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="listing for driving school start from R35.00 PM "
+        android:textColor="@color/blue"
+        android:textSize="12sp"
+        android:textStyle="bold"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inputAlternativeContact" />
 
     <Button
         android:id="@+id/btnAdd"
         android:layout_width="303dp"
         android:layout_height="38dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/round_bg"
         android:text="Add"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.382"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/noAccount" />
-
-    <TextView
-        android:id="@+id/noAccount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="32dp"
-        android:text="listing for driving school start from R35.00 PM "
-        android:textColor="@color/blue"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
