--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -18,7 +18,7 @@
 
 
     <TextView
-        android:id="@+id/idTVCourseName"
+        android:id="@+id/drivingName"
         android:layout_width="404dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
@@ -26,61 +26,43 @@
         android:layout_marginEnd="3dp"
         android:layout_marginBottom="3dp"
         android:padding="4dp"
-        android:text="Course Name"
+        android:text="Driving Name"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/idTVCourseDesc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/idTVCourseName"
+        android:id="@+id/desc"
+        android:layout_width="401dp"
+        android:layout_height="87dp"
+        android:layout_below="@id/drivingName"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="13dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp"
-        android:layout_toEndOf="@id/idIVCourse"
-        android:layout_toRightOf="@id/idIVCourse"
         android:padding="3dp"
         android:text="Description"
         android:textColor="@color/white" />
 
-    <TextView
-        android:id="@+id/idTVSuitedFor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/idTVCourseDesc"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
-        android:layout_toRightOf="@id/idIVCourse"
-        android:padding="3dp"
-        android:text="Suited for"
-        android:textColor="@color/white" />
 
     <TextView
-        android:id="@+id/idTVCoursePrice"
+        android:id="@+id/contact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/idTVSuitedFor"
+        android:layout_below="@id/desc"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="57dp"
+        android:layout_marginTop="19dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp"
-        android:layout_toRightOf="@id/idIVCourse"
         android:padding="3dp"
-        android:text="Price"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:text="Alternative Contact"
+        android:textColor="@color/white" />
 
     <LinearLayout
         android:layout_width="407dp"
         android:layout_height="101dp"
-        android:layout_below="@id/idTVCoursePrice"
-        android:layout_marginTop="29dp"
+        android:layout_below="@id/contact"
+        android:layout_marginTop="12dp"
         android:orientation="horizontal"
         android:weightSum="2">
 
@@ -88,14 +70,6 @@
 
         <!--button for viewing course details-->
 
-        <Button
-            android:id="@+id/idBtnEditCourse"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="6dp"
-            android:layout_weight="1"
-            android:text="Edit Course"
-            android:textAllCaps="false" />
 
         <Button
             android:id="@+id/idBtnVIewDetails"
@@ -103,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
             android:layout_weight="1"
-            android:text="View Details"
+            android:text="View More Details"
             android:textAllCaps="false" />
 
 
